@@ -36,7 +36,9 @@ API_EXPORT bool isObjectWrapped(const QChar& c);
 API_EXPORT bool doesStringNeedWrapping(const QString& str);
 API_EXPORT bool isStringWrapped(const QString& str);
 API_EXPORT QString wrapObjIfNeeded(const QString& obj, Dialect dialect, NameWrapper favWrapper = NameWrapper::null);
+API_EXPORT QString wrapObjIfNeeded(const QString& obj, Dialect dialect, bool useDoubleQuoteForEmptyValue, NameWrapper favWrapper = NameWrapper::null);
 API_EXPORT QString wrapObjName(const QString& obj, Dialect dialect, NameWrapper favWrapper = NameWrapper::null);
+API_EXPORT QString wrapObjName(const QString& obj, Dialect dialect, bool useDoubleQuoteForEmptyValue, NameWrapper favWrapper = NameWrapper::null);
 API_EXPORT QString wrapObjName(const QString& obj, NameWrapper wrapper);
 API_EXPORT TokenPtr stripObjName(TokenPtr token, Dialect dialect);
 API_EXPORT QString stripObjName(const QString &str, Dialect dialect);
