@@ -4,6 +4,7 @@
         * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
         * [BUGFIX]: #2989 Fixed multiline value handling in CSV import plugin.
         * [BUGFIX]: #2921 Fixed empty values as NULL handling in CSV import plugin.
+        * [BUGFIX]: #3034 Fixed handling empty string as value for DEFAULT constraint.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
